# python-project-83

./: Makefile  README.md  config.py  database.sql  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  page_analyzer.yml
page_analyzer/: __init__.py  app.py  db.py  db_requests.py  handlers.py  parse.py  req.py  urls.py  validate.py
page_analyzer/templates/: 404.html  header.html  index.html  new.html  urls.html
